tests/qd/errors/error_division.qd
fn safe_divide(a:i b:i -- result:i)! {
	dup 0 > if {
		/
	} else {
		drop drop
		0
		error
	}
}

fn main() {
	"Test 1: 10 / 2 = " .
	10 2 safe_divide? if {
		. nl
	} else {
		drop "ERROR" . nl
	}

	"Test 2: 10 / 0 = " .
	10 0 safe_divide? if {
		. nl
	} else {
		drop "ERROR" . nl
	}

	"Test 3: 100 / 5 = " .
	100 5 safe_divide? if {
		. nl
	} else {
		drop "ERROR" . nl
	}
}
